<resources>
    <!-- Login and Register Texts -->
    <string name="app_name">SmartPosture</string>
    <string name="register">Register!</string>
    <string name="email_hint">EMAIL</string>
    <string name="username_hint">USERNAME</string>
    <string name="firstname_hint">FIRST NAME</string>
    <string name="lastname_hint">LAST NAME</string>
    <string name="birthdate_hint">BIRTHDATE</string>
    <string name="password_hint">PASSWORD</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="welcome_txt">Welcome!</string>
    <string name="login_to_continue">Log in to Continue</string>
    <string name="continue_as_guest">Continue as a Guest</string>
    <string name="forgot_pass_login">Forgot Password?</string>
    <string name="click_here">CLICK HERE</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="reset_pass">Reset Password</string>
    <string name="smart">Smart</string>
    <string name="posture">Posture</string>
    <string name="tag_line">JUST TAP TO UNLOCK YOUR POSTURE PERFECT</string>
    <!-- Workout Texts -->
    <string name="workout_text">WORKOUT</string>
    <string name="workout_image">Workout Image</string>
    <string name="item">Item</string>
    <string name="squat">Squat</string>
    <string name="push_up">Push-up</string>
    <!-- Room Texts-->
    <string name="room">Room</string>
    <string name="join_room">Join Room</string>
    <string name="room_name">Room Name</string>
    <string name="room_creator">Room Creator</string>
    <string name="hint_enter_code">Enter Room Code</string>
    <string name="hint_enter_room_name">Enter Room Name</string>
    <string name="hint_enter_room_description">Enter Room Description</string>
    <string name="send_request">Send Request</string>
    <string name="create_room">Create Room</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="add_activity">Add Activity</string>
    <string name="view_request">View Join Request</string>
    <string name="room_code">Room Code</string>
    <string name="code">Code</string>
    <string name="my_rooms">My Rooms</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="search_room">Search Room</string>
    <!-- General Texts-->
    <string name="activity_name">Activity Name</string>
    <string name="due_date">Due Date: </string>
    <string name="date">10/23/2023</string>

    <string name="join_request">Join Request</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <!-- General Texts-->
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Strings-->
    <string name="login_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="username_string">username</string>
    <string name="password_string">password</string>
    <string name="Signup">Dont have an account? SIGN UP</string>
    <string name="Login_btn">Log in</string>

    <!--register-->
    <string name="register_name">Page 1</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="email_string">Email</string>
    <string name="already_have_an_account__log_in_string">Already have an account? LOG IN</string>
    <string name="sign_in_string">Sign in</string>
    <!--onboarding-->
    <string name="onboarding_name">Page 1</string>
    <string name="motive_string1">Wherever you are health is number one</string>
    <string name="motive_string2">There is no instant way to a healthy life</string>
    <string name="get_started_string">Get Started</string>

    <!--  home strings  -->
    <string name="Home">Page 1</string>
    <string name="Username">Allen Kalbo</string>
    <string name="Greetings">Good Morning </string>
    <string name="Searchbar">Search</string>
    <string name="workout_context">Lower BodyTraining</string>
    <string name="calories">500 Kcal</string>
    <string name="workout_duration">50 Min</string>
    <string name="workout_context2">HandTraining</string>
    <string name="duration2">40 Min</string>
    <string name="popularworkout">Popular Workouts</string>
    <string name="workout_plan">Push Up</string>
    <string name="workout_reps">100 Push up a day</string>
    <string name="workout_dificulty">Intermediate</string>
    <string name="workout_progress">45%</string>
    <string name="Today_plan">Today Plan</string>
    <string name="nav_barhome">Home</string>
    <!--  workout strings  -->
    <string name="workoutses">Page 1</string>
    <string name="Title">Workout</string>
    <string name="Done">Finish Work Out</string>
    <string name="steps">Steps</string>

    <string name="action">Action</string>
    <string name="trainees">Trainees</string>
    <string name="add_trainees">Add Trainees</string>
    <string name="no_room_trainees">No Room Trainees</string>
    <string name="no_join_requests">No Join Requests</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--  notification strings  -->
    <string name="notif_date">2024-12-07</string>
    <string name="notif_time">12:00</string>
    <string name="notif_divider">  |  </string>
    <string name="notification">Notification</string>
    <string name="no_notification">No Notifications Available</string>
    <string name="sample_text_short">This is a sample short text.</string>
    <string name="sample_text_long">This is a sample short text. This is a sample short text.This is a sample short text.This is a sample short text.This is a sample short text.</string>

    <string name="no_active_activities">No Active Activities</string>
    <string name="no_inactive_activities">No Inactive Activities</string>
    <string name="activity_title">Activity Title</string>
    <string name="due">DUE: </string>
    <string name="view_activity">View</string>

    <string name="create">Create</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="description_text">Description</string>
    <string name="title_text">Title</string>
    <string name="create_activity">Create Activity</string>
    <string name="repetition_text">Repetition</string>

    <string name="activity_details">Activity Details</string>
    <string name="submit_activity">Submit Activity</string>
    <string name="back_button">Back</string>
</resources>