<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/bg_white_round_border"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/notificationDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/sample_text_long"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notificationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/notif_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/notif_divider"
                android:textColor="@color/black"
                android:textSize="14sp"
                 />

            <TextView
                android:id="@+id/notificationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/notif_time"
                android:textColor="@color/black"
                android:textSize="12sp"
                 />
        </LinearLayout>
</LinearLayout>
