<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_white_round"
    android:paddingStart="20dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingEnd="12dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/roomCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_creator"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/roomActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/join_room"
        android:backgroundTint="@color/bg_dark_blue"
        android:textColor="@color/white"
        />

</LinearLayout>
