<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/bg_dark_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingRight="30dp"
                android:text="@string/activity_details"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:id="@+id/activityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/workout_text"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"

                />
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text_long"
                android:textColor="@color/white"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewActivityStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:background="@drawable/bg_add_activity">
                <TextView
                    android:id="@+id/textViewTrainees"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="View Submissions"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_room_rooms"
            android:minHeight="300dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:id="@+id/noNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="15dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_notification" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/preloaderLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="15dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/preloaderImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_sp"
                    android:contentDescription="@string/workout_image" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activityWorkoutRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/item_activity_workout"
                />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="25dp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/green_med"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp"
                android:typeface="serif"
                android:elevation="4dp"
                android:shadowColor="@color/black"
                android:text="@string/submit_activity"
                />
            <ProgressBar
                android:id="@+id/loadingSpinner"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:layout_marginBottom="14dp"
                android:visibility="gone"
                 />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>