<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roomNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/room"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <ImageView
            android:id="@+id/notification"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/ic_notification" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_add_activity"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_activity"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/activeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_marginRight="5dp"
            android:text="@string/active"
            android:backgroundTint="@color/teal"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/inactiveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_marginLeft="5dp"
            android:text="@string/inactive"
            android:backgroundTint="@color/teal"
            android:textColor="@color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text=""
        android:textAlignment="center"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRoomActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

